<resources>
    <string name="app_name">1210880_1210444_CourseProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_income">Income</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_budget">Budgets &amp; Goals</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_history">History</string>
    <string name="menu_account">Account</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="welcome_message">Welcome Back!</string>
    
    <string name="label_date">Date</string>
    <string name="label_amount">Amount</string>
    <string name="label_category">Category</string>
    <string name="label_description">Description</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="save">Save</string>
    
    <string name="total_balance">Total Balance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    
    <string name="budget_limit">Limit</string>
    <string name="set_budget">Set Budget</string>
    
    <string name="theme_dark">Dark Theme</string>
    <string name="theme_light">Light Theme</string>
</resources>
