<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_income"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_income" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/menu_expenses" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_budget" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
    </group>
    
    <item android:title="Account">
        <menu>
             <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
